feat: 당첨번호와 로또를 넣었을 때 순위를 찾는 기능 및 테스트